# aubo_i10_ros_noetic

./: README.md
aubo_demo/: README.md
aubo_demo/src/: MoveGroupInterface_To_Indigo.cpp  MoveGroupInterface_To_Kinetic.cpp  MoveGroupInterface_To_Melodic.cpp  MoveGroupInterface_To_Noetic.cpp
aubo_kinematics/: CMakeLists.txt  aubo_moveit_plugins.xml
